# suprapack

./: .gitlab-ci.yml  Author  Build.c  Build.vala  Command.c  Command.vala  Config.vala  Groups.vala  Install.c  Install.vala  List.vala  Log.c  Log.vala  Main.vala  Makefile  Makepkg.vala  Package.c  Package.vala  Query.c  Query.vala  README.md  Repository.c  Repository.vala  Run.vala  Sync.c  Sync.vala  Uninstall.vala  Utils.c  Utils.vala  compile_commands.json  main.c  main.vala  meson.build  meson_options.txt  openssl.vapi  suprapack.suprapack
.github/workflows/: release.yml
data/: info.in  meson.build  post_install
data/zsh/site-functions/: _suprapack
po/: POTFILES  fr.po
src/: BetterSearch.vala  Build.vala  Command.vala  CommandPackage.vala  CommandRepo.vala  CommandSystem.vala  Config.vala  ConfigEnv.vala  ConfigUser.vala  Http.vala  Install.vala  Log.vala  Makepkg.vala  Package.vala  Query.vala  QueueSet.vala  RepoInfo.vala  Repository.vala  Run.vala  SupraList.vala  Sync.vala  Uninstall.vala  Utils.vala  main.vala  meson.build  uname.vapi
usr/: env  info  post_install  post_install.sh  pre_install  pre_install.sh  uninstall
usr/share/applications/: suprapack-installer.desktop
usr/share/zsh/site-functions/: _suprapack
